==> chiangy77/ENGG4810/diskio.c <==
#include <stdint.h>
#include <stdbool.h>
#include "inc/tm4c123gh6pm.h"
#include "inc/hw_memmap.h"
#include "inc/hw_types.h"
#include "inc/hw_gpio.h"
#include "driverlib/pin_map.h"
#include "driverlib/gpio.h"
#include "driverlib/rom.h"
#include "driverlib/rom_map.h"
#include "driverlib/ssi.h"
#include "driverlib/sysctl.h"
#include "fatfs/src/diskio.h"
#define CMD0    (0x40+0)    /* GO_IDLE_STATE */
#define CMD1    (0x40+1)    /* SEND_OP_COND */
#define CMD8    (0x40+8)    /* SEND_IF_COND */
#define CMD9    (0x40+9)    /* SEND_CSD */
#define CMD10    (0x40+10)    /* SEND_CID */
#define CMD12    (0x40+12)    /* STOP_TRANSMISSION */
#define CMD16    (0x40+16)    /* SET_BLOCKLEN */
#define CMD17    (0x40+17)    /* READ_SINGLE_BLOCK */
#define CMD18    (0x40+18)    /* READ_MULTIPLE_BLOCK */
#define CMD23    (0x40+23)    /* SET_BLOCK_COUNT */
#define CMD24    (0x40+24)    /* WRITE_BLOCK */
#define CMD25    (0x40+25)    /* WRITE_MULTIPLE_BLOCK */
#define CMD41    (0x40+41)    /* SEND_OP_COND (ACMD) */
#define CMD55    (0x40+55)    /* APP_CMD */
#define CMD58    (0x40+58)    /* READ_OCR */
#define GPIO_PB7_SSI2TX         0x00011C02
#define GPIO_PB6_SSI2RX         0x00011802
#define GPIO_PB4_SSI2CLK        0x00011002
#define TIVA_SSI_BASE SSI2_BASE
#define TIVA_SSI_SYSCTL_PERIPH          SYSCTL_PERIPH_SSI2
#define TIVA_CS_SYSCTL_PERIPH           SYSCTL_PERIPH_GPIOA
#define TIVA_DC_SYSCTL_PERIPH           SYSCTL_PERIPH_GPIOE
#define TIVA_GPIO_SYSCTL_PERIPH         SYSCTL_PERIPH_GPIOB

static
void xmit_spi(BYTE dat)
{
    uint32_t ui32RcvDat;

    ROM_SSIDataPut(TIVA_SSI_BASE, dat); /* Write the data to the tx fifo */

    ROM_SSIDataGet(TIVA_SSI_BASE, &ui32RcvDat); /* flush data read during the write */
}

static
BYTE rcvr_spi (void)
{
    uint32_t ui32RcvDat;

    ROM_SSIDataPut(TIVA_SSI_BASE, 0xFF); /* write dummy data */

    ROM_SSIDataGet(TIVA_SSI_BASE, &ui32RcvDat); /* read data frm rx fifo */

    return (BYTE)ui32RcvDat;
}

static
void power_on (void)
{
        ROM_SysCtlPeripheralEnable (TIVA_GPIO_SYSCTL_PERIPH);
        ROM_SysCtlPeripheralEnable (TIVA_DC_SYSCTL_PERIPH);
        ROM_SysCtlPeripheralEnable (TIVA_SSI_SYSCTL_PERIPH);
        ROM_SysCtlPeripheralEnable (TIVA_CS_SYSCTL_PERIPH);

        ROM_GPIOPinConfigure (GPIO_PB4_SSI2CLK);
        ROM_GPIOPinConfigure (GPIO_PB7_SSI2TX);
        ROM_GPIOPinConfigure(GPIO_PB6_SSI2RX);

        ROM_GPIOPinTypeSSI(TIVA_GPIO_PORT_BASE, LCD_SCLK_PIN | LCD_MISO_PIN | LCD_MOSI_PIN);
        ROM_GPIOPinTypeGPIOOutput(TIVA_CS_PORT_BASE, LCD_CS_PIN | SD_CS_PIN);
        ROM_GPIOPinTypeGPIOOutput(TIVA_DC_PORT_BASE, LCD_DC_PIN);

         MAP_GPIOPadConfigSet(TIVA_GPIO_PORT_BASE, LCD_MISO_PIN, GPIO_STRENGTH_4MA,
                                 GPIO_PIN_TYPE_STD_WPU);
        MAP_GPIOPadConfigSet(TIVA_GPIO_PORT_BASE, LCD_SCLK_PIN | LCD_MOSI_PIN,
                             GPIO_STRENGTH_4MA, GPIO_PIN_TYPE_STD);
        MAP_GPIOPadConfigSet(TIVA_CS_PORT_BASE,  SD_CS_PIN,
                             GPIO_STRENGTH_4MA, GPIO_PIN_TYPE_STD);

        ROM_SSIConfigSetExpClk (TIVA_SSI_BASE, ROM_SysCtlClockGet (),
                                                        SSI_FRF_MOTO_MODE_0, SSI_MODE_MASTER, 400000, 8);
        ROM_SSIEnable (TIVA_SSI_BASE);


    /* Set DI and CS high and apply more than 74 pulses to SCLK for the card */
    /* to be able to accept a native command. */
    send_initial_clock_train();

    PowerFlag = 1;
}

static
void set_max_speed(void)
{
    unsigned long i;

    /* Disable the SSI */
    ROM_SSIDisable(TIVA_SSI_BASE);

    /* Set the maximum speed as half the system clock, with a max of 12.5 MHz. */
    i = ROM_SysCtlClockGet() / 2;
    if(i > 12500000)
    {
        i = 12500000;
    }

    /* Configure the SSI0 port to run at 12.5MHz */
    ROM_SSIConfigSetExpClk(TIVA_SSI_BASE, ROM_SysCtlClockGet(),
                           SSI_FRF_MOTO_MODE_0, SSI_MODE_MASTER, i, 8);

    /* Enable the SSI */
    ROM_SSIEnable(TIVA_SSI_BASE);
}
