==> terjeio/grblHAL/drivers/RP2040/fatfs/diskio.c <==
#include <stdint.h>
#include <stdbool.h>
#include "../driver.h"
#include "hardware/gpio.h"
#include "hardware/spi.h"
#include "ff.h"
#include "diskio.h"
#define CMD0    (0x40+0)    /* GO_IDLE_STATE */
#define CMD1    (0x40+1)    /* SEND_OP_COND */
#define CMD8    (0x40+8)    /* SEND_IF_COND */
#define CMD9    (0x40+9)    /* SEND_CSD */
#define CMD10    (0x40+10)    /* SEND_CID */
#define CMD12    (0x40+12)    /* STOP_TRANSMISSION */
#define CMD16    (0x40+16)    /* SET_BLOCKLEN */
#define CMD17    (0x40+17)    /* READ_SINGLE_BLOCK */
#define CMD18    (0x40+18)    /* READ_MULTIPLE_BLOCK */
#define CMD23    (0x40+23)    /* SET_BLOCK_COUNT */
#define CMD24    (0x40+24)    /* WRITE_BLOCK */
#define CMD25    (0x40+25)    /* WRITE_MULTIPLE_BLOCK */
#define CMD41    (0x40+41)    /* SEND_OP_COND (ACMD) */
#define CMD55    (0x40+55)    /* APP_CMD */
#define CMD58    (0x40+58)    /* READ_OCR */
#define BOOL bool
#define TRUE true
#define FALSE false

static
void xmit_spi(BYTE dat)
{
    spi_write_blocking(SPI_PORT, &dat, 1);
}

static
BYTE rcvr_spi (void)
{
    BYTE buf;

    spi_read_blocking(SPI_PORT, 0xFF, &buf, 1);

    return buf;
}

void power_on (void)
{
    static bool init = false;

    /*
     * This doesn't really turn the power on, but initializes the
     * SSI port and pins needed to talk to the card.
     */

    // SPI0

    if(!init) {
        init = true;
        spi_init(SPI_PORT, 400000);
        gpio_set_function(SD_MISO_PIN, GPIO_FUNC_SPI);
        gpio_set_function(SD_SCK_PIN, GPIO_FUNC_SPI);
        gpio_set_function(SD_MOSI_PIN, GPIO_FUNC_SPI);

        gpio_init(SD_CS_PIN);
        gpio_set_dir(SD_CS_PIN, GPIO_OUT);
        gpio_put(SD_CS_PIN, 1);
    } else
        spi_set_baudrate(SPI_PORT, 400000);

     PowerFlag = 1;
}

static
void set_max_speed(void)
{
    spi_set_baudrate(SPI_PORT, 12000000); // 12 MHz
}
